desktop browser responsive card

--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Result Summary</title>
 </head>
+
 <body>
-    <h3>Welcome Result page</h3>
+
+    <main>
+        <div id="result-container">
+
+            <h3>Your Result</h3>
+            <div class="result-number">
+                <h1>75</h1>
+                <p>of 100</p>
+            </div>
+
+            <div class="result-output-text">
+                <h3>Great</h3>
+                <p>Lorem ipsum dolor sit <br> amet consectetur adipisicing <br> elit. Asperiores, laboriosam?</p>
+            </div>
+
+        </div>
+
+        <div class="reaction-container">
+            <h2>Summary </h2>
+            <div class="reaction-item">
+                <div>
+                    <span>&#9889;</span>
+                    <span>Reaction</span>
+                </div>
+                <p>92 / 100</p>
+            </div>
+            <div class="reaction-item">
+                <div>
+                    <span>&#127747;</span>
+                    <span>Memory</span>
+                </div>
+                <p>88 / 100</p>
+            </div>
+            <div class="reaction-item">
+                <div>
+                    <span>&#9889;</span>
+                    <span>Verbel sms</span>
+                </div>
+                <p>61 / 100</p>
+            </div>
+            <div class="reaction-item">
+                <div>
+                    <span>&#9889;</span>
+                    <span>Visual</span>
+                </div>
+                <p>74 / 100</p>
+            </div>
+            <div class="continue-btn">
+                <button>Continue</button>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
