changging font size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Your Result</h3>
             <div class="result-number">
                 <h1>75</h1>
-                <p>of 100</p>
+                <p>out of 100</p>
             </div>
 
             <div class="result-output-text">
